@@ -221,6 +221,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #5607: fixed Distutils test_get_platform for Mac OS X fat binaries.
+
 - Issue #5741: don't disallow "%%" (which is an escape for "%") when setting
   a value in SafeConfigParser.
 
